.kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: protools-flowable-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: protools-flowable-demo
  template:
    metadata:
      labels:
        app: protools-flowable-demo
    spec:
      containers:
        - name: protools-flowable
          image: mailinenguyen/protools-flowable:protools-demo
          imagePullPolicy: Always
