.kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: protools-flowable-wip
spec:
  ports:
    - name: http
      targetPort: 8080
      port: 8080
  selector:
    app: protools-flowable-wip
